Update nav menus
Updated nav menus to include links to individual posts and social links

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,8 @@
 <nav class="menu">
     <ul>
-    {{ range .Site.Menus.nav  }}
+    {{ range .Site.Menus.menu  }}
         <li><a href="{{ .URL | relURL }}">{{ .Pre }}{{ .Name }}</a></li>
     {{ end }}
     </ul>
+	
 </nav>
