nav menus reference updated
used incorrect partial reference. updated to menus.main

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="menu">
     <ul>
-    {{ range .Site.Menus.menu  }}
+    {{ range .Site.Menus.main  }}
         <li><a href="{{ .URL | relURL }}">{{ .Pre }}{{ .Name }}</a></li>
     {{ end }}
     </ul>
