--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="menu">
-    <ul>
+    <ul class="nav navbar-nav navbar-right">
     {{ range .Site.Menus.main  }}
         <li><a href="{{ .URL | relURL }}">{{ .Pre }}{{ .Name }}</a></li>
     {{ end }}
