--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,26 @@
-<nav class="menu">
-    <ul class="nav navbar-nav navbar-right">
-    {{ range .Site.Menus.main  }}
-        <li><a href="{{ .URL | relURL }}">{{ .Pre }}{{ .Name }}</a></li>
-    {{ end }}
-    </ul>
+<nav class="navbar navbar-default navbar-fixed-top" id="navbar-main">
+	<div class="container">
+	<div class="navbar-header">
+	    <a href="{{.Site.BaseURL | relURL}}">
+			<span id = "blog_logo">
+			<img src="{{ .Site.Params.logo.url | relURL }}" alt="Blog Logo" style="height: 40px; width:40px">
+			</span>
+			{{if .IsHome}}
+			{{if .Site.Params.showtitle}}
+			<span id = "blog_title">
+				{{.Site.Title}}
+			</span>
+			{{end}}
+			{{end}}
+		</a>
+	</div>
+	<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+				{{ range .Site.Menus.main  }}
+			<li><a href="{{ .URL | relURL }}">{{ .Pre }}{{ .Name }}</a></li>
+				{{ end }}
+			</ul>
+	</div>
+	</div>
 	
 </nav>
