Add navbar back to single page posts

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 <!-- This is the view for each individual post -->
 {{ partial "header.html" . }}
 <body>
+{{ partial "nav.html" . }}
 <div id="layout" class="pure-g">
 <article class="pure-u-1">
 {{ partial "content.header.html" . }}
