--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,6 +2,7 @@
 
 <!--  This is the view that you get when you click "see all posts" -->
 <body>
+  {{ partial "nav.html" . }}
 <div id="layout" class="pure-g">
 <article class="pure-u-1">
   {{ partial "content.header.html" . }}
