--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" . }}
 
 <body>
+{{ partial "nav.html" . }}
 <div id="layout" class="pure-g">
 <article class="pure-u-1">
 {{ partial "content.header.html" . }}
