--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
     width: 100%;
   }
 </style>
-<div id="homepage" class="pure-g">
+<div id="homepage" class="pure-u1">
 {{ range .Site.Pages }}
   {{if eq .Type "post" }}
     {{if eq .Title "Posts"}}
