Fix homepage layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
   }
 </style>
 <div id="homepage" class="pure-g">
-div<class="pure-u-1">
+<div class="pure-u-1">
 <div class="posts">
 {{ range .Site.Pages }}
   {{if eq .Type "post" }}
