--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -18,7 +18,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				{{ range .Site.Menus.main  }}
 			<li><a href="{{ .URL | relURL }}">
-			      <i class="{{ .icon_pack }} {{  .icon-pack }}-{{ .icon }}"></i>
+			      <i class="{{ .icon_pack }} {{  .icon_pack  }}-{{ .icon }}"></i>
 			    </a></li>
 				{{ end }}
 			</ul>
