--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -16,9 +16,9 @@
 	</div>
 	<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				{{ range .Site.Menu.main  }}
+				{{ range .Site.Menus.main  }}
 			<li><a href="{{ .URL | relURL }}">
-			      <i class="fa fa-{{ .Icon }}"></i>
+			      <i class="fa fa-{{ .icon }}"></i>
 			    </a></li>
 				{{ end }}
 			</ul>
