--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				{{ range .Site.Menus.main  }}
+				{{ range .Site.Params.social  }}
 			<li><a href="{{ .URL | relURL }}">
 			      <i class="fa fa-{{ .icon }}"></i>
 			    </a></li>
