--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -17,7 +17,7 @@
 	<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				{{ range .Site.Params.social  }}
-			<li><a href="{{ .URL | relURL }}">
+			<li><a href="{{ .url }}">
 			      <i class="fa fa-{{ .icon }}"></i>
 			    </a></li>
 				{{ end }}
