--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav navbar-left">
 	  {{ range .Site.Menus.main  }}
-	  <li><a href="{{ .url }}">{{ .Name }}</a></li>
+	  <li><a href="{{ .URL }}">{{ .Name }}</a></li>
 	  {{ end }}
     </ul>
   </div>
