Fix collapsing navbar not appearing
Updated bootstrap classes

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,7 +9,7 @@
 	{{end}}
 	{{end}}
   </a>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="navbar-nav-scroll" id="navbarNav">
     <ul class="navbar-nav bd-navbar-nav flexrow">
 	  {{ range .Site.Menus.main  }}
 	  <li><a class="nav-link" href="{{ .URL }}">{{ .Name }}</a></li>
