Address inconsistent styling
include consistent layout styling between homepage and individual posts.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,15 +1,7 @@
 {{ partial "header.html" . }}
 <body>
 {{ partial "nav.html" . }}
-<style>
-  body {
-    padding-left: 0 !important;
-  }
-  p {
-    width: 100%;
-  }
-</style>
-<div id="homepage" class="pure-g">
+<div id="layout" class="pure-g">
 <article class="pure-u-1">
 <div class="posts">
 {{ range .Site.Pages }}
