Trying to fix social icons

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -17,7 +17,7 @@
     </ul>
   </div>
   <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-	{{ range $.Site.Params.social }}
+	{{ range .Site.Params.social }}
 	<li class="nav-item"><a class="nav-link p-2" href="{{  .url  }}">
 		<i class="fa-{{  .icon  }}"></i>
 	</a></li>
