--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -17,9 +17,12 @@
     </ul>
   </div>
   <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-	{{ range .Site.Params.social }}
-	<li class="nav-item"><a class="nav-link p-2" href="{{  .url  }}">
-		<i class="fa-{{  .icon  }}"></i>
-	</a></li>
+    {{ range .Site.Params.social }}
+    <li class="navitem">
+      <a itemprop="sameAs" href="{{  .link  }}" target="_blank" rel="noopener">
+        <i class="fa fa-{{ .icon  }}"></i>
+      </a>
+    </li>  
+    {{ end }}
   </ul>
 </header>
