--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<header class="navbar-nav flex-column flex-md-row bd-navbar" id="navbar-main">
+<header class="navbar-nav navbar-light flex-column flex-md-row bd-navbar" id="navbar-main">
   <a clas="navbar-brand" href="{{.Site.BaseURL | relURL}}">
     <span id = "blog_logo">
     <img src="{{ .Site.Params.logo.url | relURL }}" alt="Blog Logo" style="height: 40px; width:40px">
