--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
-<header class="navbar-nav navbar-light flex-column flex-md-row bd-navbar" id="navbar-main">
+<header class="navbar-nav navbar-light flex-column bd-navbar" id="navbar-main">
   <a clas="navbar-brand" href="{{.Site.BaseURL | relURL}}">
     <span id = "blog_logo">
-    <img src="{{ .Site.Params.logo.url | relURL }}" alt="Blog Logo" style="height: 40px; width:40px">
+    <img src="{{ .Site.Params.logo.url | relURL }}" alt="Blog Logo" style="height: {{ .Site.Params.logo.height  }}px; width: {{  .Site.Params.logo.width  }}px">
     </span>
 	{{if .IsHome}}
 	{{if .Site.Params.showtitle}}
@@ -9,16 +9,16 @@
 	{{end}}
 	{{end}}
   </a>
-  <div class="navbar-nav-scroll" id="navbarNav">
-    <ul class="navbar-nav bd-navbar-nav flexrow">
+  <div class="navbar-nav flex-row" id="navbarNav">
+    <ul class="navbar-nav bd-navbar-nav flex-row">
 	  {{ range .Site.Menus.main  }}
-	  <li><a class="nav-link p-2" href="{{ .URL }}">{{ .Name }}</a></li>
+	  <li class="nav-item"><a class="nav-link p-2" href="{{ .URL }}">{{ .Name }}</a></li>
 	  {{ end }}
     </ul>
   </div>
-  <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+  <ul class="navbar-nav flex-row">
     {{ range .Site.Params.social }}
-    <li class="navitem">
+    <li class="nav-item">
       <a class="nav-link p-2" itemprop="sameAs" href="{{  .link  }}" target="_blank" rel="noopener">
         <i class="fa fa-{{ .icon  }}"></i>
       </a>
