--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,14 +1,20 @@
-<footer class="page-footer">
-		<hr>
-		<ul class="page-footer-menu">
-		{{ range .Site.Menus.footer }}
-      <li><a href="{{.URL | relURL}}">{{.Pre }}{{ .Name }}</a></li>
-		{{ end }}
+<footer class="footer">
+	<hr>
+		<nav class="navbar-nav navbar-expand-lg navbar-light">
+		<ul class="navbar-nav text-muted">
+		    {{ range .Site.Params.social }}
+			<li class="nav-item">
+			<a class="nav-link p-2" itemprop="sameAs" href="{{  .link  }}" target="_blank" rel="noopener">
+			<i class="fa fa-{{ .icon  }} fa-2x"></i>
+			</a>
+			</li>
+			{{ end }}
 		</ul>
+		</nav>
 
   {{ if .Site.Params.showPoweredBy}}
     <p>
-      Powered by <a href="https://gohugo.io">Hugo</a> and the
+      Powered by <a href="https://gohugo.io">{{ partialCached "svg/hugo-logo-wide.svg" . }}</a> and the
       <a href="https://github.com/shawnohare/hugo-tufte">Tuftesque theme</a>.
     </p>
   {{ end }}
