update svg filename

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,7 +14,7 @@
 
   {{ if .Site.Params.showPoweredBy}}
     <p>
-      Powered by <a href="https://gohugo.io">{{ partialCached "svg/hugo-logo-wide.svg" . }}</a> and the
+      Powered by <a href="https://gohugo.io">{{ partialCached "svg/hugo-wide.svg" . }}</a> and the
       <a href="https://github.com/shawnohare/hugo-tufte">Tuftesque theme</a>.
     </p>
   {{ end }}
