--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -2,13 +2,8 @@
 {{ partial "highlight.html" . }}
 
 <!-- Pure css -->
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-<!--[if lte IE 8]>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
-<!--<![endif]-->
+<!---<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> --->
+<link rel="stylesheet" href="//cdn.jsdelivr.net/combine/npm/purecss@1.0.0/build/base-min.css,npm/purecss@1.0.0/build/grids-min.css">
 
 <!-- Fonts -->
 <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"> -->
